[package]
name = "icpc-live-infra-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "icpc-agent"
path = "src/bin/agent.rs"

[[bin]]
name = "ctl"
path = "src/bin/ctl.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
futures-util = "0.3"
chrono = "0.4"
russh = "0.44"
russh-sftp = "2"
tokio-stream = "0.1"
async-trait = "0.1"
